@@ -102,7 +102,7 @@ export("+.section",
        latlonFormat,
        loggerToc,
        lonlat2utm,
-       lonlat2xy,
+       lonlat2map,
        lonFormat,
        longitude,
        "longitude<-",
@@ -291,7 +291,7 @@ export("+.section",
        window.oce,
        write.ctd,
        utm2lonlat,
-       xy2lonlat,
+       xy2lonlat, # FIXME: move code to map2lonlat (docs too -- jeeze)
        xyzToEnu,
        xyzToEnuAdp,
        xyzToEnuAdv)
