@@ -1,5 +1,6 @@
 0.9-15
-- xy2lonlat() and lonlat2xy() added
+- lonlat2map() added
+- map2lonlat() made more accurate
 - permit proj4 style map projections
 - landsat-7 (and possibly 4 and 5) support
 - landsat decimation/plotting improvements
